[package]
name = "wasm-tic-tac-toe"
version = "0.1.0"
authors = ["mkduer <mkduer@gmail.com>"]
edition = "2018"
description = "A Rust tic-tac-toe game compiled to WASM"
license = "Apache-2.0"
repository = "https://github.com/mkduer/rust-wasm-game"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.6.5"
more-asserts = "0.2.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
